fix(frontend): back to older header style on small screen

--- a/frontend/scss/special.scss
+++ b/frontend/scss/special.scss
@@ -14,6 +14,8 @@ header {
 
   @media only screen and (max-width: 600px) {
     flex-direction: column;
+    align-items: normal;
+
     height: auto;
     min-height: var(--height-header);
     & img {
